infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-auth
  template:
    metadata:
      labels:
        app: services-auth
    spec:
      containers:
        - name: services-auth
          image: buivuong/services-auth
---
apiVersion: v1
kind: Service
metadata:
  name: services-auth-srv
spec:
  selector:
    app: services-auth
  ports:
    - name: services-auth
      protocol: TCP
      port: 5000
      targetPort: 5000
