infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-orders
  template:
    metadata:
      labels:
        app: services-orders
    spec:
      containers:
        - name: services-orders
          image: buivuong/services-orders
---
apiVersion: v1
kind: Service
metadata:
  name: services-orders-srv
spec:
  selector:
    app: services-orders
  ports:
    - name: services-orders
      protocol: TCP
      port: 5002
      targetPort: 5002
