infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-tickets
  template:
    metadata:
      labels:
        app: services-tickets
    spec:
      containers:
        - name: services-tickets
          image: buivuong/services-tickets:latest
---
apiVersion: v1
kind: Service
metadata:
  name: services-tickets-srv
spec:
  selector:
    app: services-tickets
  ports:
    - name: services-tickets
      protocol: TCP
      port: 5001
      targetPort: 5001
